golden/error/typecheck_redefined_parameter_body.test
-- @query q(coords: Coords)
SELECT
  1
WHERE
      :x /* :i32 */ > 10
  AND :y /* :i32 */ > 10
  AND :x /* :i64 */ < 10;


 --> stdin:7:13
  |
7 |   AND :x /* :i64 */ < 10;
  |              ^~~
Error: Parameter type differs from an earlier definition.

 --> stdin:5:13
  |
5 |       :x /* :i32 */ > 10
  |              ^~~
Note: First defined here.
